# Monitoring-alert

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  release.yml
monitoring-alert/: Cargo.toml  README.md
monitoring-alert/src/: collector.rs  config.rs  db.rs  logger.rs  main.rs  notification.rs  report.rs  report_template.md.j2  reporter.rs  sensors.rs  service.rs  store.rs  tests.rs
monitoring-alert/src/tests/: collector.rs  common.rs  db.rs  integration.rs  mod.rs  report.rs  sensors.rs
scripts/: Register-Tasks.ps1  apply-config.bat  config.toml  install.bat  release.sh  uninstall.bat  update.bat
tempmon/: Cargo.toml  README.md
tempmon/src/: collector.rs  db.rs  main.rs  service.rs
