[package]
name = "monitoring-alert"
version = "1.3.7"
edition = "2021"
description = "Long-term temperature monitoring Windows service"
license = "MIT"
authors = []

[[bin]]
name = "monitoring-alert"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.52", features = ["Data_Xml_Dom", "UI_Notifications"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
